# hypr-session

./: .gitignore  LICENSE  PKGBUILD  PKGBUILD-git  PKGBUILD.install  PROJECT.md  PUBLISHING.md  README.md  install.sh  pyproject.toml
.agents/: ORIGINAL_REQUEST.md
.agents/auditor_verification/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_verification_1/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/challenger_verification_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_exploration_1/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/explorer_exploration_2/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/explorer_exploration_3/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/orchestrator/: BRIEFING.md  context.md  handoff.md  plan.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/victory_auditor/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md
.agents/worker_feature_3/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_robustness_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.github/workflows/: ci.yml  publish.yml
assets/: hypr-session-daemon.service
src/hypr_session/: __init__.py  cli.py  config.py  daemon.py  mapping.py  models.py  restore.py  session.py  utils.py
src/hypr_session/data/: class_map.json
tests/: test_challenger.py  test_cli.py  test_config.py  test_daemon.py  test_features_r2_r3.py  test_mapping.py  test_models.py  test_restore.py  test_special_workspaces.py
